# yet-another-onnx-builder

./: .codespellrc  .gitignore  .path  README.md  clean.sh  make_doc.sh  onnx_export_2026-05-28_19-55-48-160087_success.md  onnx_export_2026-05-28_19-55-52-288429_success.md  plot_export_tiny_llm_attention_input_observer.xlsx  pyproject.toml  test_aten_roll_relu_dynamic_custom_.txt.ep  test_aten_roll_relu_dynamic_custom_.txt.ep.graph  test_aten_roll_relu_static_custom_.txt.ep  test_simple_export_conv_norename_script.onnx.data  test_simple_export_conv_rename_script.onnx.data  test_simple_export_pool_script.onnx.data  test_simple_export_pool_unused_opt_script.onnx.data  test_simple_export_pool_unused_script.onnx.data  test_simple_export_relu_script.onnx.data
.github/: copilot-instructions.md
.github/workflows/: ci_core.yml  ci_gallery_transformers.yml  ci_imblearn.yml  ci_litert.yml  ci_onnx_light.yml  ci_perpetual.yml  ci_polars.yml  ci_sklearn.yml  ci_sklearn_onnx.yml  ci_sksurv.yml  ci_sql.yml  ci_tensorflow.yml  ci_torch.yml  ci_torch_op_db.yml  ci_torch_python.yml  ci_transformers_dev.yml  ci_transformers_releases.yml  common_detect_module_scope.yml  common_detect_torch_subfolder.yml  copilot-instructions.md  coverage.yml  doc_examples.yml  doc_verbose.yml  docs.yml  mypy.yml  no_torch_tests.yml  pr_label_subfolders.yml  pyrefly.yml  sklearn_tests.yml  spelling.yml  style.yml  tensorflow_tests.yml  tests.yml  tests_nightly.yml  tests_no_options.yml  torch_tests.yml  torch_transformers_tests.yml  transformers_dev.yml
_tools/: run_sklearn_onnx_tests.sh  sklearn_onnx_conftest.py
_unittests/: test_pipe.py
docs/: ci_durations.rst  commits_per_week.rst  comparison.rst  conf.py  contents.rst  converters.rst  core.rst  coverage.rst  debug.rst  doc_build_durations.rst  galleries.rst  getting_started.rst  index.rst  index_stats.rst  install.rst  main_to_onnx.rst  misc.rst  pypi_downloads.rst  weekly_progress.rst
docs/_static/: custom.css
docs/api/: convert.rst  doc.rst  ext_test_case.rst  index.rst  pv_version.rst  to_onnx.rst  typing.rst
docs/auto_examples/: index.rst  sg_execution_times.rst
docs/cmds/: agg.rst  copilot_draft.rst  dot.rst  find.rst  index.rst  mermaid.rst  partition.rst  print.rst  render_gallery.rst  run_doc_examples.rst  stats.rst  validate.rst
docs/coverage/: index.rst
docs/design/: ci.rst  container.rst  cube.rst  env_variables.rst  evaluator.rst  export_artifact.rst  flatten.rst  graph_builder.rst  helpers.rst  index.rst  light_api.rst  numpy_tracing.rst  onnx_inspection.rst  optimizer.rst  optimizer_patterns.rst  patches.rst  shape.rst  to_onnx.rst  translate.rst
docs/examples/: plot_computed_shapes.py  plot_dot_graph.py  plot_evaluator_comparison.py  plot_extended_reference_evaluator.py  plot_flattening.py  plot_input_observer.py  plot_input_observer_transformers.py  plot_mini_onnx_builder.py  plot_patch_model.py  plot_print_command.py  plot_shape_expressions.py  plot_sklearn_pipeline.py  plot_sklearn_with_sklearn_onnx.py  plot_sklearn_with_spox.py  plot_tensorflow_to_onnx.py  plot_translate_comparison.py
docs/examples_sklearn/: README.txt  plot_sklearn_pipeline.py
docs/examples_torch/: README.txt  plot_input_observer_transformers.py
docs/howto/: dataframe_function.rst  index.rst  jax_model.rst  numpy_function.rst  optimize_model.rst  patches.rst  patches_how.rst  shape_inference.rst  sklearn.rst  sklearn_how.rst  sql.rst  sql_how.rst  tensorflow_how.rst  torch.rst  torch_how.rst
onnx_pipe/: __init__.py  _op.py  _pipe.py
unittests/builder/: test_light_api.py  test_light_api_operators.py  test_onnxscript_bridge.py  test_onnxscript_bridge_sklearn.py
unittests/container/: test_export_artifact.py  test_model_container.py  test_model_container_torch.py
unittests/helpers/: test_backend_test_pretty.py  test_cache_helper.py  test_cube_helper.py  test_dot_helper.py  test_einsum_helper.py  test_einsum_impl.py  test_helper.py  test_light_api.py  test_max_diff.py  test_max_diff_torch.py  test_mermaid_helper.py  test_mini_onnx_builder.py  test_mini_onnx_builder_torch.py  test_normalize_input_arg.py  test_onnx_helper.py  test_patch_helper.py  test_rt_helper.py  test_stats_helper.py  test_torch_helper.py
unittests/litert/: test_litert_converters.py  test_litert_to_onnx_consistent_args.py
unittests/main/: test_api_documentation.py  test_check_runpython.py  test_command_lines.py  test_command_lines_exe.py  test_doc.py  test_documentation_examples.py  test_ext_test_case.py  test_gallery_helper.py  test_onnx_shim.py  test_pv_version.py  test_to_onnx.py  test_unit_test.py
unittests/polars/: test_polars_to_onnx.py
unittests/reference/: test__inference_session.py  test__inference_session_torch.py  test_backend_extended_reference_evaluator.py  test_backend_onnxruntime_evaluator.py  test_backend_torch_reference_evaluator.py  test_extended_reference_evaluator.py  test_filter_ops.py  test_onnxruntime_evaluator.py  test_onnxruntime_evaluator_torch.py  test_ops_extended.py  test_runtime_info.py  test_torch_onnxruntime_evaluator.py  test_torch_reference_evaluator.py
unittests/sklearn/: test_copilot_draft.py  test_function_options.py  test_list.py  test_sklearn_column_transformer.py  test_sklearn_converters.py  test_sklearn_feature_union.py  test_sklearn_helper.py  test_sklearn_linear_models.py  test_sklearn_neural_network.py  test_sklearn_onnx_tests.py  test_sklearn_register.py  test_sklearn_to_onnx_consistent_args.py  test_sklearn_traceable.py  test_sklearn_using_sklearn_onnx.py
unittests/sql/: __init__.py  test_dataframe_onnx.py  test_pivot_table.py  test_sql_convert.py  test_sql_coverage.py  test_sql_custom_func.py  test_sql_dataframe_trace.py  test_sql_parse.py  test_sql_polars.py  test_to_onnx_params.py  test_trace_numpy_to_onnx.py
unittests/tensorflow/: test_jax2onnx_compat.py  test_jax_to_concrete_function.py  test_subclassing.py  test_tensorflow_converters.py  test_tensorflow_to_onnx_value_info_proto.py  (+1 more)
yobx/: __init__.py  __main__.py  _command_lines_parser.py  _onnx_shim.py  convert.py  doc.py  ext_test_case.py  pv_version.py  typing.py
(+1495 files in other folders)
