[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yet-another-onnx-builder"
version = "0.1.0"
description = "Converts models to ONNX format and other things"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "ml_dtypes",
    "numpy>=2.1",
    "onnx>=1.14",
    "onnxruntime>=1.20",
    "packaging",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "black",
    "matplotlib",
    "openpyxl",
    "pandas",
    "pytest>=7",
    "py-cpuinfo",
    "pytest-coverage",
    "pytest-subtests",
    "ruff",
    "skl2onnx",
    "xlsxwriter",
]
docs = [
    "black",
    "matplotlib",
    "onnx-diagnostic",
    "openpyxl",
    "pandas",
    "piccolo-theme",
    "skl2onnx",
    "sphinx>=7",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinx-issues",
    "sphinx-runpython",
    "tabulate",
    "tqdm",
    "xlsxwriter",
]
sklearn = [
    "scikit-learn>=1.4",
]
torch = [
    "accelerate",
    "huggingface_hub",
    "onnxscript @ git+https://github.com/microsoft/onnxscript.git",
    "optree",
    "sentencepiece",
    "torch>=2.10",
    "transformers>=4.45",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yobx*"]

[tool.pytest.ini_options]
testpaths = ["unittests"]

[tool.black]
line-length = 98
extend-exclude = '''.*clones*'''

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    "build",
    "dist",
]

line-length = 98

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules/
fixable = ["UP006", "UP035"]
unfixable = ["E731", "F401", "I001"]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    #"D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "G", # flake8-logging-format
    #"I", # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    #"N", # pep8-naming
    #"NPY", # modern numpy
    #"PERF", # Perflint
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "SLOT", # flake8-slot
    "T10", # flake8-debugger
    #"TID", # Disallow relative imports
    #"TRY", # flake8-try-except-raise
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.extend-per-file-ignores]
"**" = [
    "B028", "B905",
    "C401", "C408", "C413",
    "PYI041",
    "RUF010", "RUF012", "RUF100",
    "SIM102", "SIM103", "SIM108", "SIM114", "SIM910",
    "UP006", "UP007", "UP015", "UP027", "UP031", "UP032", "UP034", "UP035", "UP045",
]
"*/__init__.py" = ["F401"]
"docs/**" = ["RUF001"]
"unittests/**" = ["B904", "E731"]
"unittests/helpers/test_dot_helper.py" = ["B904", "E501"]
"yobx/builder/light/*" = ["PYI032", "UP037"]
"yobx/builder/light/_op*" = ["F821"]
"yobx/torch/in_transformers/models/_cached_configs.py" = ["PIE804"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mixin classes that intentionally call methods defined in the combined class
module = [
    "yobx.doc",
    "yobx.ext_test_case",
    "yobx.builder.light.*",
    "yobx.container.*",
    "yobx.helpers._excel_helper",
    "yobx.helpers.helper",
    "yobx.reference.ops.*",
    "yobx.reference.torch_ops.*",
    "yobx.torch.tracing.*",
    "yobx.torch.in_transformers._patches_model_rope_utils",
    "yobx.translate.*",
    "yobx.xoptim.*",
    "yobx.xshape._shape_runtime",
    "yobx.xshape._builder_runtime",
    "yobx.xshape._inference_runtime",
    "yobx.xshape.shape_type_compute",
    "yobx.xshape.shape_builder",
    "yobx.xshape.shape_builder_impl",
]
ignore_errors = true

[tool.pyrefly]
project-includes = ["yobx/**/*.py"]
project-excludes = [
    "yobx/doc.py",
    "yobx/ext_test_case.py",
    "yobx/builder/light/*",
    "yobx/container/build_stats.py",
    "yobx/container/model_container.py",
    "yobx/helpers/_excel_helper.py",
    "yobx/helpers/_onnx_simple_text_plot.py",
    "yobx/helpers/helper.py",
    "yobx/reference/ops/*",
    "yobx/reference/torch_ops/*",
    "yobx/reference/_inference_session.py",
    "yobx/reference/onnxruntime_evaluator.py",
    "yobx/torch/torch_helper.py",
    "yobx/torch/tracing.py",
    "yobx/torch/in_transformers/_patches_model_rope_utils.py",
    "yobx/torch/in_transformers/models/_cached_configs.py",
    "yobx/translate/*",
    "yobx/xoptim/*",
    "yobx/xshape/_builder_runtime.py",
    "yobx/xshape/_inference_runtime.py",
    "yobx/xshape/_shape_runtime.py",
    "yobx/xshape/shape_builder.py",
    "yobx/xshape/shape_builder_impl.py",
    "yobx/xshape/shape_type_compute.py",
    "yobx/xshape/expressions/evaluate_expressions.py",
    "yobx/xshape/expressions/simplify_expressions.py",
]

[tool.pyrefly.errors]
implicit-import = false

[[tool.pyrefly.sub-config]]
matches = "yobx/sklearn/**/*.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
bad-return = false
missing-attribute = false

[[tool.pyrefly.sub-config]]
matches = "yobx/tensorflow/ops/*.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
bad-return = false

[[tool.pyrefly.sub-config]]
matches = "yobx/xbuilder/graph_builder_opset.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
bad-return = false
missing-attribute = false
