[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yet-another-onnx-builder"
version = "0.1.0"
description = "Converts models to ONNX format and other things"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "ml_dtypes",
    "numpy>=2.1",
    "onnx>=1.14",
    "onnxruntime>=1.24",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "black",
    "matplotlib",
    "openpyxl",
    "pandas",
    "pytest>=7",
    "py-cpuinfo",
    "pytest-coverage",
    "pytest-subtests",
    "ruff",
    "xlsxwriter",
]
docs = [
    "black",
    "ipython",
    "matplotlib",
    "mermaid-py",
    "onnx-ir",
    "onnx-shape-inference",
    "openpyxl",
    "pandas",
    "pydata-sphinx-theme",
    "skl2onnx",  # for one example
    "sphinx>=7",
    "sphinxcontrib-mermaid",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinx-issues",
    "sphinx-runpython>=0.4.4",
    "tabulate",
    "tqdm",
    "xlsxwriter",
]

# packages

category_encoders = ["scikit-learn>=1.4", "category-encoders>=2.6"]
imblearn = ["scikit-learn>=1.4", "imbalanced-learn>=0.11"]
jax = ["jax[cpu]>=0.4", "tensorflow>=2.20"]
lightgbm = ["scikit-learn>=1.4", "lightgbm>=3.0"]
litert = ["ai-edge-litert"]
onnxscript = ["onnxscript @ git+https://github.com/microsoft/onnxscript.git"]
polars = ["polars"]
sklearn = ["scikit-learn>=1.4"]
sksurv = ["scikit-learn>=1.4", "scikit-survival>=0.22"]
spox = ["spox>=0.12"]
statsmodels = ["scikit-learn>=1.4", "statsmodels"]
tensorflow = ["jax", "tensorflow>=2.20"]
torch = [
    "accelerate",
    "onnxscript @ git+https://github.com/microsoft/onnxscript.git",
    "optree",
    "sentencepiece",
    "torch>=2.11",
]
transformers = [    
    "huggingface_hub",
    "scikit-learn",  # one function requires it to compute ROC curve
    "transformers>=4.45",
]
xgboost = ["scikit-learn>=1.4", "xgboost>=3.0"]
op-db = ["expecttest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["yobx*"]

[tool.pytest.ini_options]
testpaths = ["unittests"]

[tool.black]
line-length = 98
extend-exclude = '''.*clones*'''
skip-magic-trailing-comma = true

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    "build",
    "dist",
]

line-length = 98

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules/
fixable = ["UP006", "UP035"]
unfixable = ["E731", "F401", "I001"]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    #"D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "G", # flake8-logging-format
    #"I", # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    #"N", # pep8-naming
    #"NPY", # modern numpy
    #"PERF", # Perflint
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "SLOT", # flake8-slot
    "T10", # flake8-debugger
    #"TID", # Disallow relative imports
    #"TRY", # flake8-try-except-raise
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.extend-per-file-ignores]
"**" = [
    "B028", "B905",
    "C401", "C408", "C413",
    "PYI041",
    "RUF002", "RUF003", "RUF010", "RUF012", "RUF100",
    "SIM102", "SIM103", "SIM108", "SIM114", "SIM300", "SIM910",
    "UP006", "UP007", "UP015", "UP027", "UP031", "UP032", "UP034", "UP035", "UP037", "UP045",
]
"*/__init__.py" = ["F401"]
"docs/**" = ["RUF001", "SIM105"]
"unittests/**" = ["B023", "B904", "E731", "SIM300"]
"unittests/helpers/test_dot_helper.py" = ["B904", "E501"]
"yobx/builder/light/*" = ["PYI032", "UP037"]
"yobx/builder/light/_op*" = ["F821"]
"yobx/torch/in_transformers/models/_cached_configs.py" = ["PIE804"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mixin classes that intentionally call methods defined in the combined class
module = [
    "yobx.doc",
    "yobx.ext_test_case",
    "yobx.builder.light.*",
    "yobx.builder.onnxscript.*",
    "yobx.builder.spox.*",
    "yobx.container.*",
    "yobx.helpers._excel_helper",
    "yobx.litert.ops.*",
    "yobx.helpers.helper",
    "yobx.reference.ops.*",
    "yobx.sklearn.calibration.*",
    "yobx.sklearn.category_encoders.*",
    "yobx.sklearn.cluster.*",
    "yobx.sklearn.compose.*",
    "yobx.sklearn.covariance.*",
    "yobx.sklearn.cross_decomposition.*",
    "yobx.sklearn.decomposition.*",
    "yobx.sklearn.discriminant_analysis.*",
    "yobx.sklearn.dummy.*",
    "yobx.sklearn.ensemble.*",
    "yobx.sklearn.feature_extraction.*",
    "yobx.sklearn.feature_selection.*",
    "yobx.sklearn.gaussian_process.*",
    "yobx.sklearn.imblearn.*",
    "yobx.sklearn.impute.*",
    "yobx.sklearn.isotonic.*",
    "yobx.sklearn.kernel_approximation.*",
    "yobx.sklearn.kernel_ridge.*",
    "yobx.sklearn.linear_model.*",
    "yobx.sklearn.lightgbm.*",
    "yobx.sklearn.manifold.*",
    "yobx.sklearn.mixture.*",
    "yobx.sklearn.model_selection.*",
    "yobx.sklearn.multiclass.*",
    "yobx.sklearn.multioutput.*",
    "yobx.sklearn.naive_bayes.*",
    "yobx.sklearn.neighbors.*",
    "yobx.sklearn.neural_network.*",
    "yobx.sklearn.preprocessing.*",
    "yobx.sklearn.pipeline.*",
    "yobx.sklearn.sksurv.*",
    "yobx.sklearn.svm.*",
    "yobx.sklearn.tree.*",
    "yobx.sklearn.variance_threshold.*",
    "yobx.sklearn.xgboost.*",
    "yobx.reference.torch_ops.*",
    "yobx.tensorflow.ops.*",
    "yobx.litert.ops.*",
    "yobx.sql._expr.*",
    "yobx.torch._model_eval_cases",
    "yobx.torch.tracing.*",
    "yobx.torch.in_transformers._patches_model_rope_utils",
    "yobx.torch.in_transformers.classes.*",
    "yobx.torch.interpreter.*",
    "yobx.torch.interpreter.interpreter",
    "yobx.torch.testing.model_eval_cases",
    "yobx.translate.*",
    "yobx.xbuilder.graph_builder_opset",
    "yobx.xoptim.*",
    "yobx.xshape._shape_runtime",
    "yobx.xshape._builder_runtime",
    "yobx.xshape._inference_runtime",
    "yobx.xshape.shape_type_compute",
    "yobx.xshape.shape_builder",
    "yobx.xshape.shape_builder_impl",
]
ignore_errors = true

[tool.pyrefly]
project-includes = ["yobx/**/*.py"]
project-excludes = [
    "yobx/doc.py",
    "yobx/ext_test_case.py",
    "yobx/builder/light/*",
    "yobx/container/build_stats.py",
    "yobx/container/model_container.py",
    "yobx/helpers/_excel_helper.py",
    "yobx/helpers/_onnx_simple_text_plot.py",
    "yobx/helpers/helper.py",
    "yobx/litert/ops/*.py",
    "yobx/reference/ops/*",
    "yobx/reference/torch_ops/*",
    "yobx/reference/_inference_session.py",
    "yobx/reference/onnxruntime_evaluator.py",
    "yobx/torch/_model_eval_cases.py",
    "yobx/torch/in_transformers/_patches_model_rope_utils.py",
    "yobx/torch/in_transformers/classes/llama_attention.py",
    "yobx/torch/in_transformers/models/_cached_configs.py",
    "yobx/torch/interpreter/_*functions*.py",
    "yobx/torch/interpreter/_*methods.py",
    "yobx/torch/interpreter/onnx_export.py",
    "yobx/torch/interpreter/interpreter.py",
    "yobx/torch/testing/model_eval_cases.py",
    "yobx/torch/torch_helper.py",
    "yobx/torch/tracing.py",
    "yobx/translate/*",
    "yobx/xexpressions/evaluate_expressions.py",
    "yobx/xexpressions/simplify_expressions.py",
    "yobx/xoptim/*",
    "yobx/xshape/_builder_runtime.py",
    "yobx/xshape/_inference_runtime.py",
    "yobx/xshape/_shape_runtime.py",
    "yobx/xshape/shape_builder.py",
    "yobx/xshape/shape_builder_impl.py",
    "yobx/xshape/shape_type_compute.py",
]

[tool.pyrefly.errors]
implicit-import = false

[[tool.pyrefly.sub-config]]
matches = "yobx/builder/onnxscript/bridge_graph_builder.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
bad-override = false
bad-return = false

[[tool.pyrefly.sub-config]]
matches = "yobx/builder/spox/bridge_graph_builder.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
bad-override = false
bad-return = false

[[tool.pyrefly.sub-config]]
matches = "yobx/sklearn/**/*.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
bad-assignment = false
bad-index = false  # tuple[str, str] != tuple[str, ...]
bad-return = false
missing-attribute = false
missing-module-attribute = false

[[tool.pyrefly.sub-config]]
matches = "yobx/tensorflow/ops/*.py"
[tool.pyrefly.sub-config.errors]
bad-argument-type = false
bad-return = false

[[tool.pyrefly.sub-config]]
matches = "yobx/xbuilder/graph_builder_opset.py"
[tool.pyrefly.sub-config.errors]
bad-return = false
bad-override = false  # pyrefly is not happy with str | tuple[str, ...] becomes str

[[tool.pyrefly.sub-config]]
matches = "yobx/torch/new_tracing/tensor.py"
[tool.pyrefly.sub-config.errors]
bad-override = false  # new_zeros accepts TracingShape in addition to standard Sequence[int | SymInt]
